--- a/css/layout/_section-two.scss
+++ b/css/layout/_section-two.scss
@@ -6,7 +6,7 @@
 
 .square-item{
   width: 50%;
-  min-width: 350px;
+  min-width: 320px;
   padding: 20px;
 }
 
